...
        }
    }

    var activeTabIndex by remember { mutableIntStateOf(0) }

    val tabs = listOf(
        Quadruple(0, "Painel", Icons.Default.Home, "dashboard_tab"),
        Quadruple(1, "Elenco", Icons.Default.Groups, "squad_tab"),
        Quadruple(2, "Tática", Icons.Default.Assessment, "tactics_tab"),
        Quadruple(3, "Treino", Icons.Default.Build, "training_tab"),
        Quadruple(4, "Mercado", Icons.Default.Storefront, "market_tab"),
        Quadruple(5, "Finanças", Icons.Default.AttachMoney, "finance_tab"),
        Quadruple(6, "Tabelas", Icons.Default.Leaderboard, "standings_tab"),
...
